# 3D_calibrate

./: README.md  pyproject.toml  requirements.txt
config/: dataset.yaml  reconstruction.yaml  visualization.yaml
data/web_export/: demo_cube.glb
scripts/: export_to_web.py  run_reconstruction.ps1  run_reconstruction.sh
src/: __init__.py  cli.py  main.py
src/acquisition/: image_loader.py
src/reconstruction/: colmap_dense.py  colmap_wrapper.py  meshing.py  mvs_pipeline.py  openmvs_wrapper.py  projection.py  semantic_enrichment.py  sfm_pipeline.py  texturing.py
src/reconstruction/adapters/: __init__.py  base.py  colmap_adapter.py  potree_adapter.py
src/utils/: file_io.py  subprocess_utils.py
src/visualization/: local_renderer.py
tests/: test_adapters.py  test_cli_and_demo.py  test_projection.py  test_semantic_enrichment.py
